# cgj-glad

./: CMakeLists.txt  README.md
include/glad/: gl.h
src/: gl.c
